--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "babel-register": "^6.26.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "moment": "^2.24.0"
   },
